# RNB-coeur

./: .env.app.example  .env.db_auth.example  .env.metabase.example  .env.nginx-encrypt.example  .env.proxy.dev  .env.rabbitmq.example  .env.rnb.dev  .env.rnb.example  .env.rnb.prod  .env.s3_backup.example  .env.sentry.example  .env.worker.dev  .env.worker.example  .env.worker.prod  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  EXPLAIN.md  Makefile  common-services.yml  docker-compose.common.yml  docker-compose.import.yml  docker-compose.prod.yml  docker-compose.public-sandbox.yml  docker-compose.sandbox.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  fluent-bit.conf  fluentd.conf  fluentd.dev.conf  readme.md  requirementsOLD.txt  update_addresses_ban.md
app/: .dockerignore  .gitignore  Dockerfile  Untitled.ipynb  celerybeat-schedule  entrypoint.sh  example_python.py  geoapi-config.yml  openapi-schema.yml  pyproject.toml  requirements.txt  schema.yml
app/.Trash-0/files/: Rapprochement guess.ipynb  rapprochement-dataes.ipynb
app/.Trash-0/info/: Experimentation vitesse.ipynb.trashinfo  Rapprochement guess.ipynb.trashinfo  rapprochement-dataes.ipynb.trashinfo
app/api_alpha/: __init__.py  apps.py  exceptions.py  logic.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tests.py  typeddict.py  urls.py  validators.py  views.py
app/api_alpha/endpoints/: debug.py  trophies.py
app/api_alpha/serializers/: building_history.py  edition_annotation.py  event_annotation.py  public_user.py  report.py  serializers.py
app/api_alpha/tests/: helpers.py  test_ads.py  test_auth.py  test_bdg_guess.py  test_buildings.py  test_city.py  test_contributions.py  test_debug.py  test_history.py  test_log.py  test_logic.py  test_pagination.py  test_public_user_serializer.py  test_schema.py  test_summerchallenge_api.py  test_trophies.py  test_user_trophies.py  test_views.py
app/api_alpha/utils/: __init__.py  drf_spectacular_extension.py  logging_mixin.py  parse_boolean.py  rnb_doc.py  sandbox_client.py
app/api_alpha/views/: __init__.py  ads.py  auth.py  building.py  diff.py  site.py  stats.py  tiles.py
app/app/: asgi.py  authentication.py  celery.py  dbrouters.py  debug_views.py  schedule.py  settings.py  test_runner.py  urls.py  wsgi.py
app/batid/: admin.py  apps.py  dbrouters.py  exceptions.py  forms.py  list_bdg.py  middlewares.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
app/batid/fixtures/: adresses_bdnb.csv  ads.json  ads_and_operation.json  adsbdg.json  arcep_reports_for_test.csv  bal_import_test_data.csv  bal_simple.csv  ban_import_test_data.csv  ban_with_ids_duplicate_ban_id.csv  ban_with_ids_test_data.csv  batiment_construction_bdnb.csv  batiment_construction_bdnb_7.csv  batiment_construction_bdnb_update_7.csv  bdnb_2023_01_addresses.csv  bdnb_2023_01_bdgs.csv  bdtopo_2023_09_38.dbf  bdtopo_2023_09_38.shp  bdtopo_2023_09_38.shx  bdtopo_for_test.gpkg  bordeaux_reports.json  cadastre_extract.json  cadastre_extract_data.json  cities.geojson  dev.json  rel_batiment_groupe_adresse_7.csv  village.geojson  village.json  village_plots.json
app/batid/logic/: ads_search.py  bdg_search.py  building.py  search.py  source.py  user.py
app/batid/migrations/: 0001_initial.py  0002_building_ext_ban_ids_building_ext_bdnb_id_and_more.py  0003_alter_building_ext_bdnb_id.py  0004_alter_building_rnb_id.py  0005_alter_building_ext_ban_ids.py  0006_address_remove_building_ext_ban_ids_and_more.py  0007_rename_type_address_source_address_street_rep_and_more.py  0008_candidate_alter_building_options_and_more.py  0009_alter_candidate_shape.py  0010_alter_candidate_created_at.py  0011_alter_candidate_created_at_alter_candidate_shape.py  0012_alter_candidate_created_at_alter_candidate_shape.py  0013_rename_ban_ids_candidate_address_keys.py  0014_alter_building_point_alter_building_shape_and_more.py  0015_alter_candidate_inspect_result.py  0016_ads_buildingads.py  0016_city.py  0017_alter_ads_options_alter_buildingads_ads_organization.py  0018_ads_insee_code.py  0019_merge_0016_city_0018_ads_insee_code.py  0020_alter_building_source.py  0021_alter_candidate_inspect_result.py  0022_candidate_is_light.py  0023_rename_creation_date_city_created_at_and_more.py  0024_alter_city_code_insee.py  0025_alter_ads_options_and_more.py  0026_city_shape.py  0027_rename_created_at_city_established_at_and_more.py  0028_remove_city_established_at.py  0029_alter_city_shape.py  0030_alter_city_shape.py  0031_ads_city.py  0032_alter_building_rnb_id.py  0033_buildingstatus.py  0034_remove_buildingstatus__happened_at_and_more.py  0035_alter_buildingstatus_options_and_more.py  0036_signal.py  0037_alter_signal_origin.py  0038_adsend.py  0039_adsachievement_delete_adsend_and_more.py  (+211 more)
app/batid/models/: __init__.py  building.py  contribution.py  edition_annotation.py  email_notification.py  event_annotation.py  event_detail.py  feve.py  others.py  report.py  report_message.py  trophy.py
app/batid/services/: RNB_team_user.py  administrative_areas.py  ads.py  ban.py  bdg_history.py  bdg_intersect.py  bdg_on_plot.py  bdg_search.py  bdg_status.py  building.py  building_overlap.py  candidate.py  candidate_new.py  city.py  email.py  (+32 more)
app/datagouvfr_publication_2024-05-16_15-32-09/: rnb_75.csv
app/notebooks/: BAN Fetch.ipynb  Building Search Inspector.ipynb  Geocoder OSM Nominatim.ipynb  Geocoder OSM Photon.ipynb  Ilots de parcelles.ipynb  Nominatim.ipynb  Prototype score pour rapprochement.ipynb  Requete en base.ipynb  ST_Intersercts perf.ipynb  Unittests.ipynb  Untitled.ipynb  Untitled1.ipynb  Village Building Search.ipynb  test_interpreter.py.ipynb  village_context.ipynb
app/scripts/: import_diffusiondatabase_attributes.py  import_diffusiondatabases.py
app/tests/: test_migrations.py  test_utils.py
app/webhook/: tests.py  urls.py  views.py
app/website/: urls.py
app/xp/: apps.py
(+415 files in other folders)
