[tool.poetry]
name = "app"
version = "0.1.0"
description = "RNB's backend code"
authors = ["RNB team <tech@rnb.beta.gouv.fr>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.13.4"
boto3 = "~1.37.18"
Django = "~5.2.1"
drf-spectacular = "~0.28.0"
drf-api-tracking = "~1.8.4"
flower = "~2.0.1"
sentry-sdk = "~2.29.0"
django-debug-toolbar = "~5.2.0"
djangorestframework-gis = "~1.1"
psycopg2 = "~2.9.9"
django-cors-headers = "~4.7.0"
django-extensions = "~4.1"
django-revproxy = "~0.13.0"
nanoid = "~2.0.0"
geopy = "^2.4.1"
whitenoise = "~6.9.0"
watchdog = {extras = ["watchmedo"], version = "~6.0.0"}
celery = "~5.5.2"
py7zr = "~0.22.0"
ijson = "~3.4.0"
redis = "~6.1.0"
gunicorn = "~23.0.0"
requests = "~2.32.2"
pandas = "~2.2.2"
Fiona = "~1.10.1"
djangorestframework = "~3.15.2"
geopandas = "^1.0.1"
openapi-spec-validator = "^0.7.1"
orjson = "^3.10.7"
django-jsoneditor = "^0.2.4"

[tool.poetry.group.dev.dependencies]
moto = "^5.0.9"
freezegun = "^1.5.1"
notebook = "~7.4.2"
jupyter = "^1.0.0"
openpyxl = "^3.1.5"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
