[tool.poetry]
name = "app"
version = "0.1.0"
description = "RNB's backend code"
authors = ["RNB team <tech@rnb.beta.gouv.fr>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.13.4"
boto3 = "~1.40.16"
Django = "~5.2.5"
drf-spectacular = "~0.28.0"
drf-api-tracking = "~1.8.4"
flower = "~2.0.1"
sentry-sdk = "~2.35.0"
django-debug-toolbar = "~6.0.0"
djangorestframework-gis = "~1.2"
psycopg2 = "~2.9.9"
django-cors-headers = "~4.7.0"
django-extensions = "~4.1"
django-revproxy = "~0.13.0"
nanoid = "~2.0.0"
geopy = "^2.4.1"
whitenoise = "~6.9.0"
watchdog = {extras = ["watchmedo"], version = "~6.0.0"}
celery = "~5.5.3"
py7zr = "~1.0.0"
ijson = "~3.4.0"
redis = "~6.4.0"
gunicorn = "~23.0.0"
requests = "~2.32.5"
pandas = "~2.3.2"
Fiona = "~1.10.1"
djangorestframework = "~3.16.1"
geopandas = "^1.1.1"
openapi-spec-validator = "^0.7.2"
orjson = "^3.11.2"
django-jsoneditor = "^0.2.4"

[tool.poetry.group.dev.dependencies]
moto = "^5.1.11"
freezegun = "^1.5.5"
notebook = "~7.4.5"
jupyter = "^1.0.0"
openpyxl = "^3.1.5"
tqdm = "^4.67.1"
mypy = "^1.16.1"
django-stubs = {extras = ["compatible-mypy"], version = "^5.2.1"}
types-psycopg2 = "^2.9.21.20250516"
types-nanoid = "^2.0.0.20240601"
celery-types = "^0.23.0"
pandas-stubs = "^2.3.2.250827"
types-requests = "^2.32.4.20250611"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests", "notebooks",
  "batid/services/imports", # Should be added back, but attack vector less likely
  "batid/services/data_gouv_publication.py",
  "batid/services/data_fix"
]
skips = [
  "B113", # Lots of requests without timeout to be fixed, but we need to address more important things first
  "B202" # We do have unsanitized extracts, but from hardcoded sources. It must be fixed, but the attack vector is more intricated
]

[tool.mypy]
exclude = [
  "batid/tests/",
  "api_alpha/tests/",
  "xp/",
  "scripts/",
  "notebooks/",
  "webhook/",
  "manage.py",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["boto3.*", "rest_framework", "rest_framework.*", "rest_framework_tracking.*", "geopandas"]
follow_untyped_imports = true
